--- a/src/pages/CoinRechargePage.css
+++ b/src/pages/CoinRechargePage.css
@@ -73,8 +73,8 @@
     margin-right: 0.4rem;
 }
 .coin-icon-large {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     object-fit: contain;
 }
 
